# scb_test_task

./: .env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  setup.py
app/: database.py  initializer.py  main.py
app/application/: DAL.py  models.py  router.py  schemas.py
app/auth/: DAL.py  auth.py  handlers.py  login_handler.py  models.py  schemas.py  service_funcs.py
app/utils/: count_dictance.py
app/utils/auth/: hashing.py  security.py
app/utils/dadata/: funcs.py
app/warehouse/: DAL.py  models.py  router.py  schemas.py
docker/: app.sh
docker_compose/: app.yaml
migrations/: env.py
migrations/versions/: 0ec7dbd4b1e7_new_triggers.py  18b2ed30df3a_user_model.py  5815ec61af20_added_application_status_models.py  68cac587239b_added_application_and_package_type_.py  d08f0d116a3b_warehouse_model.py
